--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <title>Testimonial cards</title>
 </head>
 <body>
-<p>
-    I have been solving all the project ideas on roadmap.sh, and I am surprised how far I have come from where I started
-    Highly recommended
-</p>
+<article>
+    <p>
+        I have been solving all the project ideas on roadmap.sh, and I am surprised how far I have come from where I started
+        Highly recommended!
+    </p>
+    <p>Artem Jones</p>
+    <p>Software Engineer</p>
+</article>
+
+<article>
+    <p>
+        Since starting my career in 2021, I have only followed one resource, roadmap.sh, it truly helped me go from 0
+        to having a job and changing the financial trajectory of my family.
+    </p>
+
+    <p>Artem Jones</p>
+    <p>Junior Frontend Developer</p>
+</article>
+
+
+<article>
+
+    <p>Jackie Mackle</p>
+    <p>Engineering Manager</p>
+    <p>
+
+        I find myself recommending roadmap.sh to all the internees or junior developers.
+        It's a great way to skill up and grow in your career
+    </p>
+
+</article>
+
+<article>
+    <p>
+        roadmap.sh is an incredible resource. I was fortunate to discover it during my university days in 2018.
+        Back then, it was just a single repository with three images. It's amazing to see how much impact it has had
+        on millions of lives since then
+    </p>
+    <p>Artem Jones</p>
+</article>
 </body>
 </html>
