Add CSS styling and update HTML structure
Linked `style.css` to apply consistent styling to testimonial cards. Added custom classes (`click`, `jones`, `mackle`, `roadmap`) for articles to provide distinct layouts. Simplified and reorganized HTML for improved readability and structure.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Testimonial cards</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<article>
+<article class="click">
     <p>
         I have been solving all the project ideas on roadmap.sh, and I am surprised how far I have come from where I started
-        Highly recommended!
     </p>
-    <p>Artem Jones</p>
-    <p>Software Engineer</p>
+    <p>Highly recommended!</p>
 </article>
 
-<article>
+<article class="jones">
     <p>
         Since starting my career in 2021, I have only followed one resource, roadmap.sh, it truly helped me go from 0
         to having a job and changing the financial trajectory of my family.
@@ -25,7 +24,7 @@
 </article>
 
 
-<article>
+<article class="mackle">
 
     <p>Jackie Mackle</p>
     <p>Engineering Manager</p>
@@ -37,7 +36,7 @@
 
 </article>
 
-<article>
+<article class="roadmap">
     <p>
         roadmap.sh is an incredible resource. I was fortunate to discover it during my university days in 2018.
         Back then, it was just a single repository with three images. It's amazing to see how much impact it has had
